--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ p.azul {
 p.rojo {
     color: red;
 }
+span.azulnegrita{
+    color: blue;
+    font-weight: bold;
+}
 </style>
     
 
@@ -22,7 +26,7 @@ p.rojo {
 <body>
     <p class="verde">SIDI</p>
     <p class="rojo">Desde lo alto de la loma...</p>
-    <p class="azul">Tiró de la rienda... <span style="font-weight: bold;">No habrían sobrevivido de otro modo</span> junto al único pozo...</p>
+    <p class="azul">Tiró de la rienda... <span class="azulnegrita">No habrían sobrevivido de otro modo</span> junto al único pozo...</p>
     <p class="verde">Ganen o pierdan,...</p>
 </body>
 </html>
