--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@ span.azulnegrita{
 </head>
 <body>
     <p class="verde">SIDI</p>
-    <p class="rojo">Desde lo alto de la loma...</p>
-    <p class="azul">Tiró de la rienda... <span class="azulnegrita">No habrían sobrevivido de otro modo</span> junto al único pozo...</p>
-    <p class="verde">Ganen o pierdan,...</p>
+    <p class="rojo">Desde lo alto de la loma, haciendo visera con una mano en el borde del yelmo, el jinete cansado miró a lo lejos. El sol, vertical a esa hora, parecía hacer ondular el aire en la distancia, espesándolo hasta darle una consistencia casi física. La pequeña mancha parda de San Hernán se distinguía en medio de la llanura calcinada y pajiza, y de ella se alzaba al cielo una columna de humo. No procedía ésta de sus muros fortificados, sino de algo situado muy cerca, seguramente el granero o el establo del monasterio.</p>
+    <p class="azul">Tiró de la rienda para que el caballo volviese grupas y descendió por la falda de la ladera. Los frailes de San Hernán, meditaba mientras atendía en dónde ponía el animal las patas, eran gente dura, hecha a pelear. <span class="azulnegrita">No habrían sobrevivido de otro modo</span> junto al único pozo de buena agua de la zona, en el camino habitual de las algaras moras que cruzaban el río desde el sur en busca de botín, ganado, esclavos y mujeres.</p>
+    <p class="verde">Ganen o pierdan, concluyó el jinete, cuando lleguemos todo habrá terminado.</p>
 </body>
 </html>
+
+
+
+
+
+
+
+
